--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,9 +1,7 @@
 <DOCTYPE .html>
   <html>
     <link href='https://fonts.googleapis.com/css?family=Montserrat|Raleway' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="contact-main.css">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script src="script.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/contact-main.css">
     <div id="navbar">
       <div class="row">
         <div class="col-md-3">
@@ -12,13 +10,12 @@
         <div class="col-md-3">
           <a href="projects.html" style="text-decoration: none;"><h class="button-link">Projects</h> </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-6">
           <a href="about.html" style="text-decoration: none;"><h class="button-link">About</h></a>
         </div>
       </div>
       <div id="removtextdecor" style="text-decoration: none;">
         <a href="index.html" style="text-decoration: none;"><h class="titleslot"> Pristine Projects </h></a>
-          <h id="name"> By Garrett Credi</h>
       </div>
     </div>
   <div id="jumbotron">
@@ -31,8 +28,7 @@
 
 
     <div id="foot">
-		<h id="footer"> SITE BY <span> <a href="about.html" class="button-l">GARRETT CREDI </a> </span> </h>
-		<h id="sndh"> MADE IN 2016 </h>
-        <h id="cites">MADE WITH <span><a href="http://www.jquery.com" class="button-l">  jQuery</a></span> AND HTML/CSS</h>
-	</div>
+    <h id="footer"> SITE BY <span> <a href="about.html" class="button-l">GARRETT CREDI </a> </span> </h>
+    <h id="sndh"> MADE IN 2016 </h>
+  </div>
   </html>
