--- a/pages/about.html
+++ b/pages/about.html
@@ -15,7 +15,7 @@
         </div>
       </div>
       <div id="removtextdecor" style="text-decoration: none;">
-        <a href="index.html" style="text-decoration: none;"><h class="titleslot"> Pristine Projects </h></a>
+        <a href="home.html" style="text-decoration: none;"><h class="titleslot"> Pristine Projects </h></a>
       </div>
     </div>
   <div id="jumbotron">
