--- a/pages/home.html
+++ b/pages/home.html
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div id="removtextdecor" style="text-decoration: none;">
-      <a href="index.html" style="text-decoration: none;">
+      <a href="home.html" style="text-decoration: none;">
         <h class="titleslot"> Pristine Projects </h>
       </a>
     </div>
