--- a/pages/home.html
+++ b/pages/home.html
@@ -57,5 +57,15 @@
     <h id="footer"> SITE BY <span> <a href="about.html" class="button-l">GARRETT CREDI </a> </span> </h>
     <h id="sndh"> MADE IN 2016 </h>
   </div>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-75603673-3', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
   </html>
