--- a/pages/home.html
+++ b/pages/home.html
@@ -1,34 +1,14 @@
 <DOCTYPE .html>
   <html>
+  <title>
+    Pristine Projects
+  </title>
   <link href='https://fonts.googleapis.com/css?family=Montserrat|Raleway' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 <script src="../js/script.js"></script>
-  <div id="navbar">
-    <div class="row">
-      <div class="col-md-3">
-        <a href="contact.html" style="text-decoration: none;">
-          <h class="button-link">Contact</h>
-        </a>
-      </div>
-      <div class="col-md-3">
-        <a href="projects.html" style="text-decoration: none;">
-          <h class="button-link">Projects</h>
-        </a>
-      </div>
-      <div class="col-md-6">
-        <a href="about.html" style="text-decoration: none;">
-          <h class="button-link">About</h>
-        </a>
-      </div>
-    </div>
-    <div id="removtextdecor" style="text-decoration: none;">
-      <a href="home.html" style="text-decoration: none;">
-        <h class="titleslot"> Pristine Projects </h>
-      </a>
-    </div>
-  </div>
+  <navbar> </navbar>
   <div id="mainslot">
     <div id="jumbotron">
       <h> Welcome! </h>
@@ -67,5 +47,6 @@
   ga('send', 'pageview');
 
 </script>
+<script src="../js/app.js"> </script>
 
   </html>
