--- a/pages/home.html
+++ b/pages/home.html
@@ -47,6 +47,7 @@
   ga('send', 'pageview');
 
 </script>
+<script src="../libraries/angular.min.js"></script>
 <script src="../js/app.js"> </script>
 
   </html>
