--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,23 +1,8 @@
 <DOCTYPE .html>
-  <html>
+  <html ng-app="pristineProjects">
     <link href='https://fonts.googleapis.com/css?family=Montserrat|Raleway' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="../css/contact-main.css">
-    <div id="navbar">
-      <div class="row">
-        <div class="col-md-3">
-          <a href="contact.html" style="text-decoration: none;"><h class="button-link">Contact</h></a>
-        </div>
-        <div class="col-md-3">
-          <a href="projects.html" style="text-decoration: none;"><h class="button-link">Projects</h> </a>
-        </div>
-        <div class="col-md-6">
-          <a href="about.html" style="text-decoration: none;"><h class="button-link">About</h></a>
-        </div>
-      </div>
-      <div id="removtextdecor" style="text-decoration: none;">
-        <a href="home.html" style="text-decoration: none;"><h class="titleslot"> Pristine Projects </h></a>
-      </div>
-    </div>
+    <navbar-pristine></navbar-pristine>
   <div id="jumbotron">
     <p> Contact Me! </p>
   </div>
