Adding to both Git and Heroku

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,5 +1,5 @@
 <DOCTYPE .html>
-<html>
+<html ng-app="pristineProjects">
 <link href='https://fonts.googleapis.com/css?family=Montserrat|Raleway' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="../css/project-main.css">
 <navber-pristine></navbar-pristine>
@@ -37,4 +37,6 @@
   ga('send', 'pageview');
 
 </script>
+<script src="../libraries/angular.min.js"></script>
+<script src="../js/app.js"> </script>
 </html>
