--- a/pages/about.html
+++ b/pages/about.html
@@ -26,4 +26,6 @@
   ga('send', 'pageview');
 
 </script>
+<script src="../libraries/angular.min.js"></script>
+<script src="../js/app.js"> </script>
 </html>
