Adding to both Git and Heroku

--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -1,23 +1,23 @@
 <div id="navbar">
   <div class="row">
     <div class="col-md-3">
-      <a href="pages/contact.html" style="text-decoration: none;">
+      <a href="contact.html" style="text-decoration: none;">
         <h class="button-link">Contact</h>
       </a>
     </div>
     <div class="col-md-3">
-      <a href="pages/projects.html" style="text-decoration: none;">
+      <a href="projects.html" style="text-decoration: none;">
         <h class="button-link">Projects</h>
       </a>
     </div>
     <div class="col-md-6">
-      <a href="pages/about.html" style="text-decoration: none;">
+      <a href="about.html" style="text-decoration: none;">
         <h class="button-link">About</h>
       </a>
     </div>
   </div>
   <div id="removtextdecor" style="text-decoration: none;">
-    <a href="pages/home.html" style="text-decoration: none;">
+    <a href="home.html" style="text-decoration: none;">
       <h class="titleslot"> Pristine Projects </h>
     </a>
   </div>
