--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,42 +1,42 @@
 <DOCTYPE .html>
-<html ng-app="pristineProjects">
-<link href='https://fonts.googleapis.com/css?family=Montserrat|Raleway' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" type="text/css" href="../css/project-main.css">
-<navber-pristine></navbar-pristine>
-<div id="title">
-<p> My Projects </p>
-</div>
-<div id="project-div">
-      <div id="project-site">
+  <html ng-app="pristineProjects">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat|Raleway' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="../css/about-main.css">
+    <navbar-pristine></navbar-pristine>
+		<div id="title">
+			<p> My Projects </p>
+		</div>
+		<div id="project-div">
+			<div id="project-site">
 				<a href="./index.html">
-        <img src="../img/pristine.jpg" class="imag"/>
-        <p class="img-schp"> The Site You Are On Right Now! </p>
-			</a>
-      </div>
-			<div id="urea">
-				<a href="http://u-react.herokuapp.com">
-				<img src="../img/u-react.jpg" class="imag"/>
-				<p class="img-schp" id="u-schp"> A Reaction Speed Tester <br/> <span id="mov-bit"> built with JavaScript!<span> </p>
+					<img src="../img/pristine.jpg" class="imag"/>
+					<p class="img-schp"> The Site You Are On Right Now! </p>
 				</a>
 			</div>
-</div>
-<div id="morecome">
-	<p id="text" class="img-schp" style="width: 500px;"> More Coming Soon! </p>
-</div>
-	<div id="foot">
-		<h id="footer"> SITE BY <span> <a href="about.html" class="button-l">GARRETT CREDI </a> </span> </h>
-		<h id="sndh"> MADE IN 2016 </h>
-	</div>
-	<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+			<div id="urea">
+				<a href="http://u-react.herokuapp.com">
+					<img src="../img/u-react.jpg" class="imag"/>
+					<p class="img-schp" id="u-schp"> A Reaction Speed Tester <br/> <span id="mov-bit"> built with JavaScript!<span> </p>
+					</a>
+				</div>
+			</div>
+			<div id="morecome">
+				<p id="text" class="img-schp" style="width: 500px;"> More Coming Soon! </p>
+			</div>
+			<div id="foot">
+				<h id="footer"> SITE BY <span> <a href="about.html" class="button-l">GARRETT CREDI </a> </span> </h>
+				<h id="sndh"> MADE IN 2016 </h>
+			</div>
+			<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-75603673-3', 'auto');
-  ga('send', 'pageview');
+			ga('create', 'UA-75603673-3', 'auto');
+			ga('send', 'pageview');
 
-</script>
-<script src="../libraries/angular.min.js"></script>
-<script src="../js/app.js"> </script>
-</html>
+			</script>
+			<script src="../libraries/angular.min.js"></script>
+			<script src="../js/app.js"> </script>
+			</html>
