Adding to both Git and Heroku

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,7 +1,7 @@
 <DOCTYPE .html>
   <html ng-app="pristineProjects">
     <link href='https://fonts.googleapis.com/css?family=Montserrat|Raleway' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="../css/about-main.css">
+    <link rel="stylesheet" type="text/css" href="../css/project-main.css">
     <navbar-pristine></navbar-pristine>
 		<div id="title">
 			<p> My Projects </p>
